security rest hardening
