# webapp/src/main/java/ar/edu/itba/paw/webapp/restcontrollers/UserController.java
@@ -3,9 +3,9 @@ package ar.edu.itba.paw.webapp.restcontrollers;
 
 import ar.edu.itba.paw.interfaces.exception.UserNotFoundException;
 import ar.edu.itba.paw.interfaces.services.UserService;
-import ar.edu.itba.paw.model.Token;
 import ar.edu.itba.paw.model.User;
 import ar.edu.itba.paw.model.enums.Platform;
+import ar.edu.itba.paw.webapp.auth.ApiAuthorizationService;
 import ar.edu.itba.paw.webapp.auth.CurrentUserProvider;
 import ar.edu.itba.paw.webapp.auth.JwtTokenService;
 import ar.edu.itba.paw.webapp.dto.entities.CommentDTO;
@@ -14,7 +14,12 @@ import ar.edu.itba.paw.webapp.dto.entities.UserDTO;
 import ar.edu.itba.paw.webapp.dto.params.ListUsersByNameParams;
 import ar.edu.itba.paw.webapp.dto.params.PaginationParams;
 import ar.edu.itba.paw.webapp.dto.requests.AddUserAccountRequest;
+import ar.edu.itba.paw.webapp.dto.requests.ConfirmVerificationRequest;
 import ar.edu.itba.paw.webapp.dto.requests.CreateUserRequest;
+import ar.edu.itba.paw.webapp.dto.requests.LoginUserRequest;
+import ar.edu.itba.paw.webapp.dto.requests.RequestPasswordResetRequest;
+import ar.edu.itba.paw.webapp.dto.requests.ResendVerificationRequest;
+import ar.edu.itba.paw.webapp.dto.requests.ResetPasswordRequest;
 import ar.edu.itba.paw.webapp.exception.ApiErrorFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -49,6 +54,9 @@ public class UserController {
     @Autowired
     private CurrentUserProvider currentUserProvider;
 
+    @Autowired
+    private ApiAuthorizationService apiAuthorizationService;
+
     @GET
     @Produces(value = {Vendor.APPLICATION_USER_LIST})
     public Response listUsersByName(@Valid @BeanParam ListUsersByNameParams params) {
@@ -66,6 +74,7 @@ public class UserController {
     @GET
     @Path("/me")
     @Produces(value = {Vendor.APPLICATION_USER})
+    @Deprecated
     public Response getCurrentUser() {
         return Response.ok(UserDTO.fromUser(uriInfo, currentUserProvider.getCurrentUser())).build();
     }
@@ -132,19 +141,25 @@ public class UserController {
     }
 
     @POST
-    @Path("/me/accounts")
+    @Path("/{id}/accounts")
     @Consumes(value = {Vendor.APPLICATION_USER_ACCOUNT_CREATE})
     @Produces(value = {Vendor.APPLICATION_USER_ACCOUNT_LIST})
-    public Response addCurrentUserAccount(@Valid AddUserAccountRequest request) {
-        us.addUserAccount(currentUserProvider.getCurrentUserId(), request.getPlatform(), request.getUsername());
+    public Response addUserAccount(@PathParam("id") long id, @Valid AddUserAccountRequest request) {
+        if (id <= 0) {
+            return ApiErrorFactory.badRequest("Invalid user id");
+        }
 
-        List<UserAccountDTO> accounts = us.getUserAccounts(currentUserProvider.getCurrentUserId()).stream()
+        apiAuthorizationService.assertCurrentUser(id);
+
+        us.addUserAccount(id, request.getPlatform(), request.getUsername());
+
+        List<UserAccountDTO> accounts = us.getUserAccounts(id).stream()
                 .map(UserAccountDTO.mapper(uriInfo))
                 .toList();
 
         URI location = uriInfo.getBaseUriBuilder()
                 .path("users")
-                .path(String.valueOf(currentUserProvider.getCurrentUserId()))
+                .path(String.valueOf(id))
                 .path("accounts")
                 .path(request.getPlatform().name())
                 .build();
@@ -152,15 +167,36 @@ public class UserController {
         return Response.created(location).entity(new GenericEntity<>(accounts) {}).build();
     }
 
+    @POST
+    @Path("/me/accounts")
+    @Consumes(value = {Vendor.APPLICATION_USER_ACCOUNT_CREATE})
+    @Produces(value = {Vendor.APPLICATION_USER_ACCOUNT_LIST})
+    @Deprecated
+    public Response addCurrentUserAccount(@Valid AddUserAccountRequest request) {
+        return addUserAccount(currentUserProvider.getCurrentUserId(), request);
+    }
+
     @DELETE
-    @Path("/me/accounts/{platform}")
-    public Response deleteCurrentUserAccount(@PathParam("platform") Platform platform) {
+    @Path("/{id}/accounts/{platform}")
+    public Response deleteUserAccount(@PathParam("id") long id, @PathParam("platform") Platform platform) {
+        if (id <= 0) {
+            return ApiErrorFactory.badRequest("Invalid user id");
+        }
         if (platform == null) {
             return ApiErrorFactory.badRequest("Invalid platform");
         }
 
-        us.deleteUserAccount(currentUserProvider.getCurrentUserId(), platform);
+        apiAuthorizationService.assertCurrentUser(id);
+
+        us.deleteUserAccount(id, platform);
         return Response.noContent().build();
+    }
+
+    @DELETE
+    @Path("/me/accounts/{platform}")
+    @Deprecated
+    public Response deleteCurrentUserAccount(@PathParam("platform") Platform platform) {
+        return deleteUserAccount(currentUserProvider.getCurrentUserId(), platform);
     }
 
     @POST
@@ -178,25 +214,19 @@ public class UserController {
     @POST
     @Path("/verifications")
     @Consumes(value = {Vendor.APPLICATION_USER_VERIFICATION})
-    @Produces(value = {Vendor.APPLICATION_TOKEN})
-    public Response resendVerificationEmail(@Valid UserDTO userDto) {
-        User user = us.findByEmail(userDto.getEmail()).orElseThrow(UserNotFoundException::new);
+    public Response resendVerificationEmail(@Valid ResendVerificationRequest request) {
+        User user = us.findByEmail(request.getEmail()).orElseThrow(UserNotFoundException::new);
 
-        Token token = us.resendVerification(user);
-
-        URI uri = uriInfo.getAbsolutePathBuilder()
-                // TODO: check if this happens in the context of /users or /users/verifications. Is it a GET on that resource? If so, make it
-                .path(String.valueOf(token.getId()))
-                .build();
-
-        // TODO: need to see how this ends up working. How does it know to return the structure of the DTO and not the model? Does/Should it return a JSON?
-        return Response.created(uri).build();
+        us.resendVerification(user);
+        return Response.noContent().build();
     }
 
     @PUT
     @Path("/verifications")
+    @Consumes(value = {Vendor.APPLICATION_USER_VERIFICATION_CONFIRM})
     @Produces(value = {Vendor.APPLICATION_USER})
-    public Response verifyUser(@QueryParam("token") long token) {
+    public Response verifyUser(@Valid ConfirmVerificationRequest request) {
+        long token = request.getToken();
         User user = us.findUserByToken(token);
 
         us.verifyEmail(token, user.getId());
@@ -206,29 +236,22 @@ public class UserController {
                 .build();
     }
 
-    // TODO: do the same for this function as mentioned in resendVerificationEmail
     @POST
     @Path("/password-requests")
     @Consumes(value = {Vendor.APPLICATION_PASSWORD_RESET_REQUEST})
-    @Produces(value = {Vendor.APPLICATION_TOKEN})
-    public Response requestPasswordReset(@Valid UserDTO userDto) {
-        String userEmail = userDto.getEmail();
+    public Response requestPasswordReset(@Valid RequestPasswordResetRequest request) {
+        us.requestPasswordReset(request.getEmail());
 
-        Token token = us.requestPasswordReset(userEmail);
-
-        URI uri = uriInfo.getAbsolutePathBuilder()
-                .path(String.valueOf(token.getId()))
-                .build();
-
-        return Response.created(uri).build();
+        return Response.noContent().build();
     }
 
     @PUT
     @Path("/password-requests")
     @Consumes(value = {Vendor.APPLICATION_PASSWORD_RESET})
     @Produces(value = {Vendor.APPLICATION_USER})
-    public Response resetPassword(@Valid UserDTO userDto, @QueryParam("token") long token) {
-        us.resetPassword(token, userDto.getPassword()); // TODO: check if this works by only populating the 'password' field of UserDTO
+    public Response resetPassword(@Valid ResetPasswordRequest request) {
+        long token = request.getToken();
+        us.resetPassword(token, request.getPassword());
 
         User user = us.findUserByToken(token);
 
@@ -241,10 +264,10 @@ public class UserController {
     @Path("/sessions")
     @Consumes(value = {Vendor.APPLICATION_USER_LOGIN})
     @Produces(value = {Vendor.APPLICATION_USER})
-    public Response login(@Valid UserDTO userDto) {
-        Authentication authentication = new UsernamePasswordAuthenticationToken(userDto.getUsername(), userDto.getPassword());
+    public Response login(@Valid LoginUserRequest request) {
+        Authentication authentication = new UsernamePasswordAuthenticationToken(request.getUsername(), request.getPassword());
         authenticationManager.authenticate(authentication);
-        User user = us.findByUsername(userDto.getUsername()).orElseThrow(UserNotFoundException::new);
+        User user = us.findByUsername(request.getUsername()).orElseThrow(UserNotFoundException::new);
         return Response.ok(UserDTO.fromUser(uriInfo, user))
                 .header(HttpHeaders.AUTHORIZATION, jwtTokenService.createJwsToken(user))
                 .build();
